--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 8088
+  spring:
+    thymeleaf:
+      cache: false
+      prefix: file:src/main/resources/templates/
+    devtools:
+      livereload:
+        enabled: true
+      restart:
+        enabled: true
+logging:
+  level:
+    com.koreait.exam.chat_25_06: debug
